tests/compile-errors/ce-type-check-mode.valk

fn main() {
    let x : Array[String] = map[String]{}
}